# ScalableRAG

./: .gitignore  DEPLOYMENT.md  README.md  bm25_index.pkl  document_metadata_summary.json  env_template.txt  fix_dependencies.py  main.py  monitor_deployment.py  package-lock.json  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt  run_backend.py  run_server.py  test_api.py  test_startup.py  test_ultra_minimal.py
evaluation/: advanced_metrics.py  config.py  enhanced_test_data.py  evaluator.py  metrics.py  test_data.py
evaluation_results/: eval_1757806527_status.json  eval_1757879376_status.json  rag_evaluation_20250914_041947.json  rag_evaluation_fixed_20250914_044026.json
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/components/: Chat.tsx  EnvironmentInfo.tsx  Evaluations.tsx  Metrics.tsx  Upload.tsx
frontend/components/tutoring/: InitializationProvider.tsx  InitializationStatus.tsx
frontend/lib/: api.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
load_index/: bm25_index.pkl  make.py
rag_app/: bm25_index.pkl  document_metadata_summary.json  main.py  main_minimal.py  main_ultra_minimal.py  pipeline.py  start_server.py
rag_app/evaluation_results/: rag_evaluation_fixed_20250914_050709.json
rag_app/test_datasets/: generated_test_cases.json
templates/: chatbot.html
test_datasets/: corrected_test_cases.json  enhanced_ground_truth.json  generated_test_cases.json
tests/: check_pinecone_api.py  debug_evaluation.py  debug_pinecone.py  quick_pinecone_check.py  quick_test.py  test_advanced_system.py  test_basic.py  test_comprehensive.py  test_fix.py  test_simple.py
